# psqlomni

./: CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  env.example  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-audit.yml  docs.yml  release.yml
docs/: commands.md  getting-started.md  index.md
psqlomni/: __main__.py  config.py  db.py  llm.py
psqlomni/graph/: builder.py  nodes.py  tool_nodes.py
psqlomni/tools/: sql_tools.py
psqlomni/ui/: renderer.py
tests/: test_config.py  test_db.py  test_graph_nodes.py  test_llm.py  test_main_commands.py  test_renderer.py  test_sql_tools.py
