[tool.poetry]
name = "psqlomni"
version = "0.1.1"
description = "LLM-powered chat interface to your Postgres database - (psql powered with Natural Language)"
authors = ["emmakodes <emmamichael65@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prompt-toolkit = "^3.0.43"
psycopg2-binary = "^2.9.9"
toml = "^0.10.2"
langchain = "^1.2.10"
langchain-community = "^0.4.1"
langchain-openai = "^1.1.9"
langchain-anthropic = {version = "^0.3.20", optional = true}
langchain-google-genai = {version = "^2.1.12", optional = true}
langchain-ollama = {version = "^0.3.8", optional = true}
langgraph = "^1.0.5"

[tool.poetry.extras]
anthropic = ["langchain-anthropic"]
google = ["langchain-google-genai"]
ollama = ["langchain-ollama"]
all-models = ["langchain-anthropic", "langchain-google-genai", "langchain-ollama"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
psqlomni = 'psqlomni.__main__:main'
